- fixed some view bugs settings modal and cleared content for new features - created new fancy popup replacing old content modal -- using standard #popup- IDs to simpler orienting in code -- fixed weird showing image and aligning in the screen -- calculation of image is now simpler -- fixed resizing small image (or video) over all screen and causing blury view -- using html img tag instead background -- all info about image is showing in new popup-footer with room to more data about loaded item -- opening image in fullscreen is now only via filename in the footer. Click on the image (or opacity background around item) is closing popup -- added much nicer loading icon wich is showing during animations and while item is loading - added animation with preparation to user can edit animation length (potentialy from zero to unlimited miliseconds) - added more bugs to fix later... :/

--- a/public/main.css
+++ b/public/main.css
@@ -3,7 +3,9 @@ body {
     max-width: 1900px; /* 1920 - padding */
     padding: 10px;
     padding-top: 0; /* without reseting to zero navbar looks weird */
+    margin-bottom: 3em; /* because of popup-footer */
 }
+#popup-footer,
 #navbar {
     background-color: #f8f9fa;
 }
@@ -83,133 +85,148 @@ body {
     background-color: #c0c0c0 !important;
 }
 
-@media (min-width: 576px) {
-    #content-modal .modal-dialog { max-width: none; }
+/**
+ * Popup start
+ */
+#popup {
+    position: fixed;
+	top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1030; /* has to be bigger than #navbar */
+    background: rgba(0,0,0,0.5);
+    transition: background-color .3s ease-in-out;
+    text-align: center;
+}
+#popup-content {
+	width: 100%;
+	height: 100%;
+}
+#popup-image,
+#popup-video,
+#popup-loading {
+	max-height: inherit;
+	max-width: inherit;
+	/**
+     * Vertical and horizontal center image
+     * This solution respect parent size with gap for footer
+	 * @Author https://stackoverflow.com/a/46276156
+	 */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
 
-#content-modal .modal-dialog {
-    width: 98%;
-    height: 92%;
-    padding: 0;
-}
+#popup-footer {
+    height: 3em;
+	width: 100%;
+	max-width: 1920px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	position: fixed;
+	margin: 0 auto;
 
-#content-modal .modal-content {
-    height: 99%;
 }
-#content-modal .modal-content a.image {
-    display: block;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
+#popup-footer .list-inline-item {
+	padding: 0;
+	height: 3em;
+	min-width: 2.5em;
+	line-height: 1em;
+	padding: 1em 0.5em;
+	transition: all 0.2s ease-in-out;
+	cursor: pointer;
+	margin: 0;
 }
-#content-modal .modal-content video {
-    margin: 0 auto;
-    display: block;
-}
-#content-modal .modal-body {
-    padding: 0;
-}
-#content-modal p {
-    width: 100%;
-    text-align: center;
-    margin: 10px;
-}
-#content-modal .navigation {
-    width: 100%;
-    text-align: center;
+#popup-footer .list-inline-item:hover{
+	background: rgba(255,255,255,0.1);
 }
 /**
  * prev/next buttons from lightbox tutorial
  * @Author https://www.w3schools.com/howto/howto_js_lightbox.asp
  */
-.prev,
-.next {
-    z-index: 1; /* show above video */
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: 2.5em;
-    padding: 3em 1em;
-    margin-top: -50px;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
+#popup-prev,
+#popup-next {
+	z-index: 1; /* show above video */
+	cursor: pointer;
+	position: absolute;
+	top: 40%;
+	width: 4em;
+	padding: 3em 1em;
+	margin-top: -50px;
+	font-weight: bold;
+	font-size: 20px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	-webkit-user-select: none;
+	background-color: rgba(0, 0, 0, 0.3);
+	color: white;
 }
-.next:hover,
-.prev:hover {
-    color: white;
-    text-decoration: none;
+#popup-next:hover,
+#popup-prev:hover {
+	color: white;
+	text-decoration: none;
 }
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+#popup-next {
+	right: 0;
+	border-radius: 0.5em 0 0 0.5em;
 }
-
+#popup-prev {
+	left: 0;
+	border-radius: 0 0.5em 0.5em 0;
+}
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+#popup-prev:hover,
+#popup-next:hover {
+	background-color: rgba(0, 0, 0, 0.5);
 }
-
-#loading {
-    display: block;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 10px;
-    z-index: 1100;
-}
-#loading div {
-    height: 10px;
-}
-
+/**
+ * Popup end
+ */
 
 /**
  * Change colors to dark mode if body has ".dark" class
  * - but do not change print output
  */
 @media not print {
-    body.theme-dark #navbar,
-    body.theme-dark #navbar .dropdown-menu {
-        background-color: #343a40;
-    }
-    body.theme-dark #navbar .dropdown-item:focus,
-    body.theme-dark #navbar .dropdown-item:hover,
-    body.theme-dark #navbar .breadcrumb {
-        background-color: #616161;
-    }
+	body.theme-dark #navbar,
+	body.theme-dark #popup-footer,
+	body.theme-dark #navbar .dropdown-menu,
     body.theme-dark .modal-content {
-        background-color: black;
-    }
-    body.theme-dark #filter input,
-    body.theme-dark #filter .input-group-text {
-        border: black;
-        color: #909090;
-        background-color: black;
-    }
-    body.theme-dark .table-striped > tbody > tr:nth-of-type(odd) {
-        background-color: #212121;
-    }
-    body.theme-dark {
-        background-color: black;
-        color: #909090;
-    }
-    body.theme-dark a:not(.btn) {
-        color: orange;
-    }
-    body.theme-dark .progress-bar {
-        background-color: orange;
-    }
-    body.theme-dark .structure-selected,
-    body.theme-dark #structure table tbody tr:hover {
-        background-color: #616161 !important;
-    }
-    body.theme-dark hr {
+		background-color: #343a40;
+	}
+	body.theme-dark #navbar .dropdown-item:focus,
+	body.theme-dark #navbar .dropdown-item:hover,
+	body.theme-dark #navbar .breadcrumb {
+		background-color: #616161;
+	}
+	body.theme-dark #filter input,
+	body.theme-dark #filter .input-group-text {
+		border: black;
+		color: #909090;
+		background-color: black;
+	}
+	body.theme-dark .table-striped > tbody > tr:nth-of-type(odd) {
+		background-color: #212121;
+	}
+	body.theme-dark {
+		background-color: black;
+		color: #909090;
+	}
+	body.theme-dark a:not(.btn) {
+		color: orange;
+	}
+	body.theme-dark .progress-bar {
+		background-color: orange;
+	}
+	body.theme-dark .structure-selected,
+	body.theme-dark #structure table tbody tr:hover {
+		background-color: #616161 !important;
+	}
+	body.theme-dark hr {
 		border-top: 1px solid rgba(255,255,255,.3);
 	}
 }
